@@ -1,5 +1,5 @@
-/* Generated by re2c 0.5 on Thu Apr 17 02:53:49 2003 */
-#line 1 "/usr/src/web/php/php4/ext/standard/url_scanner_ex.re"
+/* Generated by re2c 0.5 on Wed Feb 11 11:33:22 2004 */
+#line 1 "/home/rei/php4/ext/standard/url_scanner_ex.re"
 /*
   +----------------------------------------------------------------------+
   | PHP Version 4                                                        |
@@ -918,7 +918,7 @@ static void php_url_scanner_output_handler(char *output, uint output_len, char *
 	size_t len;
 
     if (BG(url_adapt_state_ex).url_app.len != 0) {
-        *handled_output = url_adapt_ext(output, output_len, &len, (zend_bool) (mode&PHP_OUTPUT_HANDLER_END ? 1 : 0) TSRMLS_CC);
+        *handled_output = url_adapt_ext(output, output_len, &len, (zend_bool) (mode & (PHP_OUTPUT_HANDLER_END|PHP_OUTPUT_HANDLER_CONT) ? 1 : 0) TSRMLS_CC);
 		if (sizeof(uint) < sizeof(size_t)) {
 			if (len > UINT_MAX)
 				len = UINT_MAX;
